@@ -1,6 +1,10 @@
 package org.launchcode.threemix.controller;
 
 import org.launchcode.threemix.json.TokenResponse;
+import org.launchcode.threemix.model.BlockedArtist;
+import org.launchcode.threemix.model.BlockedSong;
+import org.launchcode.threemix.model.User;
+import org.launchcode.threemix.service.UserService;
 import org.launchcode.threemix.service.SessionStorage;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpEntity;
@@ -9,10 +13,9 @@ import org.springframework.http.HttpMethod;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.HashMap;
+import jakarta.servlet.http.HttpSession;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 public class PlaylistExportController {
@@ -21,14 +24,26 @@ public class PlaylistExportController {
     private RestTemplate restTemplate;
 
     @Autowired
+    private UserService userService;
+
+    @Autowired
     private SessionStorage<TokenResponse> tokenStorage;
 
     @CrossOrigin(origins = "http://localhost:5173", allowCredentials = "true")
     @PostMapping(value = "/generateTrackList", produces = "application/json")
     public Map<String, Object> generateTrackList(@CookieValue("accessToken") String accessToken,
-                                                 @RequestParam List<String> chosenGenres) {
-        // Placeholder: Simulate fetching blocked artists and songs
-        Map<String, List<String>> blockedList = getBlockedList();
+                                                 @RequestParam List<String> chosenGenres,
+                                                 HttpSession session) {
+        // Retrieve the Spotify ID from the session
+        String spotifyId = (String) session.getAttribute("spotifyId");
+        User user = userService.findUserBySpotifyId(spotifyId);
+
+        // Fetch blocked artists and songs from the database
+        List<String> blockedArtists = userService.findBlockedArtistByUser(user)
+                .stream().map(BlockedArtist::getArtistId).toList();
+
+        List<String> blockedSongs = userService.findBlockedSongsByUser(user)
+                .stream().map(BlockedSong::getSongId).toList();
 
         // Generate recommendations from Spotify API
         HttpHeaders headers = new HttpHeaders();
@@ -38,18 +53,9 @@ public class PlaylistExportController {
         Map<String, Object> trackRecommendations = getRecommendations(chosenGenres, entity);
 
         // Filter out blocked artists and songs
-        filterRecommendations(trackRecommendations, blockedList);
+        filterRecommendations(trackRecommendations, blockedArtists, blockedSongs);
 
-        System.out.println(trackRecommendations.keySet());
         return trackRecommendations;
-    }
-
-    // Placeholder method to simulate fetching blocked artists and songs
-    private Map<String, List<String>> getBlockedList() {
-        Map<String, List<String>> blockedList = new HashMap<>();
-        blockedList.put("artists", List.of("blockedArtistId1", "blockedArtistId2"));
-        blockedList.put("songs", List.of("blockedSongId1", "blockedSongId2"));
-        return blockedList;
     }
 
     // Method to fetch recommendations from Spotify API
@@ -68,11 +74,8 @@ public class PlaylistExportController {
     }
 
     // Method to filter out blocked artists and songs
-    private void filterRecommendations(Map<String, Object> recommendations, Map<String, List<String>> blockedList) {
+    private void filterRecommendations(Map<String, Object> recommendations, List<String> blockedArtists, List<String> blockedSongs) {
         List<Map<String, Object>> tracks = (List<Map<String, Object>>) recommendations.get("tracks");
-
-        List<String> blockedArtists = blockedList.get("artists");
-        List<String> blockedSongs = blockedList.get("songs");
 
         List<Map<String, Object>> filteredTracks = tracks.stream()
                 .filter(track -> {
@@ -88,7 +91,7 @@ public class PlaylistExportController {
 
                     return !isBlockedArtist && !isBlockedSong;
                 })
-                .collect(Collectors.toList());
+                .toList(); // Using .toList() for simplicity
 
         recommendations.put("tracks", filteredTracks);
     }
